--- a/css/common.css
+++ b/css/common.css
@@ -1,50 +1,148 @@
+
+
+
+
+#transition { transition:0.5s all; -webkit-transition:0.5s all; -moz-transition:0.5s all; -o-transition:0.5s all; }
+
+#transform { transform:translateY(-50%); -webkit-transform:translateY(-50%); -moz-transform:translateY(-50%); }
+
+
 @charset "utf-8";
 /* CSS Document */
 
 
 
 /*font*/
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans|Nanum+Gothic');
+@import url('https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700');
 
 
 
 /*reset*/
+html, body { width:100%; height:100%; overflow:hidden; }
+
 body,p,h1,h2,h3,h4,h5,h6,ul,ol,li { margin:0; padding:0; }
-body,p,h1,h2,h3,h4,h5,h6 { font:12px 'Noto Sans', 'Nanum Gothic', sans-serif;}
+body,p,h1,h2,h3,h4,h5,h6, a { font-family: 'Raleway', sans-serif; font-size:12px; letter-spacing:1px; text-decoration:none; color:#fff; }
 ul,ol,li { list-style:none; }
-img { border:none; vertical-align:middle; }
-a { text-decoration:none; color:#fff; }
+img { border:none; vertical-align:middle; width:100%; }
 
 
 
 
 
-/*footer*/
-/*footer { position:absolute; width:100%; height:150px; bottom:0; background-color:#333; }
 
-#footer_wrap { position:absolute; width:60%; top:25px; left:20%; }
-footer ul { float:left; color:#fff; margin-right:200px; }
-ul li.role { font-weight:bold; margin-bottom:10px; }
 
-ul#sns { float:right; margin-right:0;  }
-ul#sns li { float:left; margin-right:15px; }
-ul#sns li:last-child { margin-right:0; }
-ul#sns li a { display:block; width:25px; height:25px; text-align:center; }
-.fab, .fas { font-size:25px; color:#fff; }*/
+/*header_wrap layout*/
+header { position:absolute; top:75px; left:5%; width:90%; /*background-color:#fff;*/ }
 
-footer { position:absolute; width:100%; height:150px; bottom:0; background-color:#333; }
+h1#logo, nav, p#nav_btn, ul#nav_menu { float:left; }
+ul#nav_menu > li { float:left; }
+#trailer_box { float:right; }
 
-#footer_wrap { position:absolute; width:60%; top:25px; left:20%; }
-footer ul { float:left; color:#fff; }
-ul li.role { font-weight:bold; margin-bottom:10px; }
+h1#logo { width:100px; }
 
-ul#andrew { width:35%; }
-ul#dahye { width:35%; }
-ul#sns { width:30%; }
+nav { margin-left:10%; transition:0.5s all; -webkit-transition:0.5s all; -moz-transition:0.5s all; -o-transition:0.5s all; }
 
-ul#sns li { float:left; margin-right:15px; }
-ul#sns li:last-child { margin-right:0; }
-ul#sns li a { display:block; width:25px; height:25px; text-align:center; }
-.fab, .fas { font-size:25px; color:#fff; }
 
-ul#sns li#copy { font-size:11px; color:#ddd; margin-top:15px; }
+
+
+
+/*nav_menu_btn*/
+nav #nav_btn { position:relative; width:75px; height:18px; float:left; margin-right:300px; cursor:pointer; transition:0.5s all; -webkit-transition:0.5s all; -moz-transition:0.5s all; -o-transition:0.5s all; }
+
+#nav_btn b { display:block; position:relative; top:0; left:0; width:17px; height:17px; }
+#nav_btn b span { display:block; position:absolute; top:50%; transform:translateY(-50%); -webkit-transform:translateY(-50%); -moz-transform:translateY(-50%); width:100%; height:2px; float:left; background-color:#fff; }
+#nav_btn b span:before, #nav_btn b span:after { content:''; display:block; position:absolute; top:0; width:100%; height:2px; background-color:#fff; }
+#nav_btn b span:before { transform:translateY(-6px); -webkit-transform:translateY(-6px); -moz-transform:translateY(-6px); }
+#nav_btn b span:after { transform:translateY(6px); -webkit-transform:translateY(6px); -moz-transform:translateY(6px); }
+
+#nav_btn p { position:absolute; top:0; left:25px; font-size:15px; line-height:18px; }
+
+
+
+/*nav_menu*/
+
+ul#nav_menu li { position:relative; }
+ul#nav_menu li a { display:block; width:150px; text-align:center; line-height:18px; }
+ul#nav_menu > li + li { margin-left:25px; }
+ul#nav_menu > li > a { font-size:15px; margin-bottom:50px; transition:0.3s all; -webkit-transition:0.3s all; -moz-transition:0.3s all; -o-transition:0.3s all; }
+ul#nav_menu > li > a:hover { opacity:0.5; }
+
+
+
+/*sub_menu*/
+#nav_bg { display:none; position:absolute; top:0; left:0; width:100%; height:250px; background-color:rgba(28,45,59,0.5); }
+
+ul.menu_sub { display:none; position:absolute; top:75px; left:0; }
+ul.menu_sub li a { color:rgba(255,255,255,0.75); transition:0.3s all; -webkit-transition:0.3s all; -moz-transition:0.3s all; -o-transition:0.3s all; }
+ul.menu_sub li a:hover { opacity:0.5; }
+ul.menu_sub li + li { margin-top:25px; }
+
+
+
+/*trailer_box*/
+#t_text { display:block; transition:0.3s all; -webkit-transition:0.3s all; -moz-transition:0.3s all; -o-transition:0.3s all; }
+#t_text:hover { opacity:0.5; }
+#t_circle a { display:none; width:150px; height:150px; border-radius:100px; background-color:#fff; }
+
+
+
+
+
+/*bottom_box*/
+ul#bottom { position:absolute; bottom:50px; right:5%; }
+ul#bottom li { float:left; line-height:25px; text-align:center; }
+ul#bottom a { transition:0.3s all; -webkit-transition:0.3s all; -moz-transition:0.3s all; -o-transition:0.3s all; }
+
+ul#bottom li:first-child:after { content:'·'; padding:0 15px; }
+ul#bottom li:last-child a { display:block; width:100px; height:25px; border:1px solid rgba(255,255,255,0.5); box-sizing:border-box; }
+
+ul#bottom li:first-child a:hover { opacity:0.5; }
+ul#bottom li:last-child a:hover { background-color:rgba(255,255,255,0.85); color:#333; }
+
+
+
+
+
+
+/*media query*/
+@media screen and (min-width:1350px) and (max-width:1599px) {  
+	/*ul#nav_menu > li:first-child a { color:red; }*/
+
+	nav #nav_btn { margin-right:200px; }
+}
+
+@media screen and (min-width:1000px) and (max-width:1349px) {  
+	/*ul#nav_menu > li:first-child a { color:orange; }*/
+
+	nav { float:right; margin-left:0; }
+	nav #nav_btn { margin-right:150px; }
+
+	#t_text { display:none; }
+}
+
+@media screen and (min-width:750px) and (max-width:999px) {  
+	/*ul#nav_menu > li:first-child a { color:green; }*/
+
+	nav { float:right; margin-left:0; }
+	nav #nav_btn { display:none; }
+
+	#t_text { display:none; }
+}
+
+@media screen and (min-width:650px) and (max-width:749px) {  
+	/*ul#nav_menu > li:first-child a { color:blue; }*/
+
+	nav #nav_btn { position:absolute; width:17px; height:17px; right:0; margin-right:0; }
+	nav #nav_btn p, #nav_menu { display:none; }
+
+	#t_text { display:none; }
+}
+
+@media screen and (max-width:649px) { 
+	/*ul#nav_menu > li:first-child a { color:pink; }*/
+
+	nav #nav_btn { position:absolute; width:17px; height:17px; right:0; margin-right:0; }
+	nav #nav_btn p, #nav_menu { display:none; }
+
+	#t_text { display:none; }
+}
