--- a/doc/clay/css/common.css
+++ b/doc/clay/css/common.css
@@ -15,26 +15,11 @@
 
 /*reset*/
 
-html, body {
-	position:relative;
-	width:100%; height:100%;
-	/*overflow:hidden;*/
-}
+html, body { position:relative; width:100%; height:100%; /*overflow:hidden;*/ }
 
-body,p,h1,h2,h3,h4,h5,h6,ul,ol,li {
-	margin:0; padding:0;
-}
-body,p,h1,h2,h3,h4,h5,h6,a {
-	font-family:'Noto Sans KR', sans-serif;
-	font-size:17px; font-weight:300;
-	text-decoration:none;
-	color:#60516f;
-}
+body,p,h1,h2,h3,h4,h5,h6,ul,ol,li { margin:0; padding:0; }
+body,p,h1,h2,h3,h4,h5,h6,a { font-family:'Noto Sans KR', sans-serif; font-size:17px; font-weight:300;
+							text-decoration:none; color:#60516f; }
 
-ul,ol,li {
-	list-style:none;
-}
-img {
-	border:none;
-	vertical-align:middle;
-}
+ul,ol,li { list-style:none; }
+img { border:none; vertical-align:middle; }
