--- a/doc/moon/css/common.css
+++ b/doc/moon/css/common.css
@@ -28,7 +28,7 @@ body,p,h1,h2,h3,h4,h5,h6,ul,ol,li {
 	margin:0; padding:0;
 }
 body,p,h1,h2,h3,h4,h5,h6,a {
-	font-family:'Open Sans', sans-serif;
+	font-family:'Noto Serif', sans-serif;
 	font-size:15px; font-weight:400;
 	color:#525d69;
 	text-decoration:none;
@@ -84,7 +84,7 @@ header {
 
 /* 'Didot font -> Image' Area */
 #logo a {
-	font-family:linotype-didot, 'Italiana', serif;
+	font-family:linotype-didot, 'Playfair Display', serif;
 	font-size:20px; font-weight:700; line-height:32px;
 	letter-spacing:1px; 
 	white-space:nowrap;
@@ -113,7 +113,7 @@ header {
 	position:relative;
 	display:inline-block;
 	padding-top:5px; 
-	font-family:'Open Sans', sans-serif;
+	font-family:'Noto Serif', sans-serif;
 	transition:all 0.5;
 	-webkit-transition:all 0.5s;
 	-moz-transition:all 0.5s;
