--- a/doc/patagonia/css/common.css
+++ b/doc/patagonia/css/common.css
@@ -15,7 +15,7 @@
 
 /*reset*/
 
-html, body { position:relative; width:100%; height:100%; overflow:hidden; }
+html, body { position:relative; width:100%; height:100%; }
 
 body,p,h1,h2,h3,h4,h5,h6,ul,ol,li { margin:0; padding:0; }
 body,p,h1,h2,h3,h4,h5,h6,a {
