--- a/doc/patagonia/css/sub.css
+++ b/doc/patagonia/css/sub.css
@@ -1,4 +1,4 @@
-html, body { overflow:hidden; background-color:#fff; }
+html, body { background-color:#fff; }
 
 
 
@@ -8,7 +8,7 @@ html, body { overflow:hidden; background-color:#fff; }
 
 .wrap_show { z-index:10000; position:relative; top:6%; left:4%; 
 		width:92%; height:94%; 
-		/*border:1px solid #fff;*/  }
+		/*border:1px solid #fff;*/ }
 
 .wrap { position:absolute; top:0; left:0; 
 		width:100%; height:100%; opacity:0;
